[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/enemy__haytham/enemy_haytham_walk(0).tres" type="Texture" id=1]
[ext_resource path="res://assets/enemy__haytham/enemy_haytham_walk(6).tres" type="Texture" id=2]
[ext_resource path="res://assets/enemy__haytham/enemy_haytham_walk(1).tres" type="Texture" id=3]
[ext_resource path="res://assets/enemy__haytham/enemy_haytham_walk(5).tres" type="Texture" id=4]
[ext_resource path="res://assets/enemy__haytham/enemy_haytham_walk(7).tres" type="Texture" id=5]
[ext_resource path="res://assets/enemy__haytham/enemy_haytham_walk(2).tres" type="Texture" id=6]
[ext_resource path="res://assets/enemy__haytham/enemy_haytham_walk(4).tres" type="Texture" id=7]
[ext_resource path="res://assets/enemy__haytham/enemy_haytham_walk(3).tres" type="Texture" id=8]
[ext_resource path="res://assets/enemy__haytham/enemy_haytham_death(3).tres" type="Texture" id=9]
[ext_resource path="res://assets/enemy__haytham/enemy_haytham_death(0).tres" type="Texture" id=10]
[ext_resource path="res://assets/enemy__haytham/enemy_haytham_death(1).tres" type="Texture" id=11]
[ext_resource path="res://assets/enemy__haytham/enemy_haytham_death(2).tres" type="Texture" id=12]
[ext_resource path="res://assets/enemy__haytham/enemy_haytham_death(9).tres" type="Texture" id=13]
[ext_resource path="res://assets/enemy__haytham/enemy_haytham_death(5).tres" type="Texture" id=14]
[ext_resource path="res://assets/enemy__haytham/enemy_haytham_death(7).tres" type="Texture" id=15]
[ext_resource path="res://assets/enemy__haytham/enemy_haytham_death(4).tres" type="Texture" id=16]
[ext_resource path="res://assets/enemy__haytham/enemy_haytham_death(6).tres" type="Texture" id=17]
[ext_resource path="res://assets/enemy__haytham/enemy_haytham_death(8).tres" type="Texture" id=18]
[ext_resource path="res://assets/enemy__haytham/enemy_haytham_attack(1).tres" type="Texture" id=19]
[ext_resource path="res://assets/enemy__haytham/enemy_haytham_attack(0).tres" type="Texture" id=20]
[ext_resource path="res://scenes/Enemy_Haytham.gd" type="Script" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 18 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 19 ), ExtResource( 19 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.3041, 11.3152 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 8.45956
height = 13.8954

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 294.997, 18.416 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13.2464, 16.8869 )

[node name="Enemy_Haytham" type="KinematicBody2D"]
script = ExtResource( 21 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.13, 0.13 )
frames = SubResource( 1 )
animation = "attack"
frame = 2

[node name="Attack" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
position = Vector2( 14.7157, 0.210224 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4.47084, 0.677662 )
shape = SubResource( 3 )

[node name="CanFollow" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanFollow"]
position = Vector2( 0.222733, 0 )
shape = SubResource( 4 )

[node name="CanAttack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanAttack"]
position = Vector2( 14.9361, -0.619629 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
[connection signal="body_entered" from="Attack" to="." method="_on_Attack_body_entered"]
[connection signal="body_entered" from="CanFollow" to="." method="_on_CanFollow_body_entered"]
[connection signal="body_entered" from="CanAttack" to="." method="_on_CanAttack_body_entered"]
[connection signal="body_exited" from="CanAttack" to="." method="_on_CanAttack_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
